Bug 493675 - Disks & Devices applet doesn't show LUKS-encrypted disks as mountable devices anymore
Summary: Disks & Devices applet doesn't show LUKS-encrypted disks as mountable devices...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Disks & Devices widget (other bugs)
Version First Reported In: 6.1.90
Platform: Other Linux
: VHI major
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2024-09-26 07:12 UTC by Tomasz Hołubowicz
Modified: 2024-09-27 18:54 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.2.0
Sentry Crash Report:


Attachments
Removable drive is not visible in applet (271.30 KB, image/png)
2024-09-26 07:14 UTC, Tomasz Hołubowicz
Details
Crash report related to crash that happens when unmounting drive from Devices in Dolphin (37.58 KB, text/plain)
2024-09-26 19:20 UTC, Tomasz Hołubowicz
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tomasz Hołubowicz 2024-09-26 07:12:28 UTC
SUMMARY
Applet Disks & Devices stopped working properly even though it was working fine in 6.1.5. 

STEPS TO REPRODUCE
1. Insert USB pendrive.

OBSERVED RESULT
Even though the sound plays that a new device was connected, there is no notification with "Open or mount" action. After entering Disks & Devices applet in system tray, there is not information about mountable/removable devices even though they are available in Dolphin.

EXPECTED RESULT
Disks & Devices applet allows mounting external drives.  

SOFTWARE/OS VERSIONS
Operating System: Fedora Linux 41
KDE Plasma Version: 6.1.90
KDE Frameworks Version: 6.6.0
Qt Version: 6.7.2

ADDITIONAL INFORMATION
Kernel Version: 6.11.0-63.fc41.x86_64 (64-bit)
Comment 1 Tomasz Hołubowicz 2024-09-26 07:14:04 UTC
Created attachment 174095 [details]
Removable drive is not visible in applet
Comment 2 Akseli Lahtinen 2024-09-26 13:02:35 UTC
Can't reproduce on my setup

Operating System: Fedora Linux 40
KDE Plasma Version: 6.1.90
KDE Frameworks Version: 6.7.0
Qt Version: 6.7.2
Kernel Version: 6.10.10-200.fc40.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 3600 6-Core Processor
Memory: 15,5 GiB of RAM
Graphics Processor: AMD Radeon RX 6600
Comment 3 Nate Graham 2024-09-26 17:01:40 UTC
It's a LUKS-encrypted disk, right?
Comment 4 Tomasz Hołubowicz 2024-09-26 17:30:10 UTC
(In reply to Nate Graham from comment #3)
> It's a LUKS-encrypted disk, right?

Right! It's LUKS-encrypted. Sorry, forgot to mention that. I there a duplicate of this bug already?
Comment 5 Nate Graham 2024-09-26 19:07:40 UTC
Nope, this is the only one, to my knowledge.

I had just noticed the issue today with one of my own LUKS-encrypted disks, and was about to troubleshoot to see if it was a hardware issue or something. The fact that you're seeing the same thing makes me confident that it's a code regression on our side.

I can still see the disk in Partition Manager and mount it from there with some difficulty (need to manually create a mountpoint for it); it's just the Disks & Devices widget that doesn't seem to notice that it's a mountable disk.

CCing some people who were involved in the port away from the DataEngine.
Comment 6 Tomasz Hołubowicz 2024-09-26 19:18:57 UTC
I have noticed one more thing that might be related or might be another bug. I have such encrypted drive mounted in Dolphin. When I mount it appears in Devices category with drive's name. So now it is displayed in Devices as its name and in Removable Devices as a "<number> GiB Encrypted Drive" and here comes the fun part. If I unmount it from Devices it crashes plasmashell. If I unmount it from Removable Devices everything is fine. I'll attach crash report here, but if I should move it to separate bug, please let me know.
Comment 7 Tomasz Hołubowicz 2024-09-26 19:20:05 UTC
Created attachment 174119 [details]
Crash report related to crash that happens when unmounting drive from Devices in Dolphin
Comment 8 Bogdan Onofriuchuk 2024-09-27 09:26:37 UTC
I'll take a look today after work.
Comment 9 Bug Janitor Service 2024-09-27 17:39:30 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/4762
Comment 10 Nate Graham 2024-09-27 18:31:31 UTC
Git commit 14d52770a69e52332c66f81af755c2a7a7fca660 by Nate Graham, on behalf of Bohdan Onofriichuk.
Committed on 27/09/2024 at 18:31.
Pushed by ngraham into branch 'master'.

applets/devicenotifier: Fix encrypted devices not being shown

This was accidentally removed in the port away from the DataEngine.
FIXED-IN: 6.2.0

M  +2    -1    applets/devicenotifier/plugin/devicecontrol.cpp
M  +1    -0    applets/devicenotifier/plugin/devicecontrol.h

https://invent.kde.org/plasma/plasma-workspace/-/commit/14d52770a69e52332c66f81af755c2a7a7fca660
Comment 11 Nate Graham 2024-09-27 18:54:03 UTC
Git commit 179f69df384ac66354ca2e65579ce52ce9cfc35e by Nate Graham.
Committed on 27/09/2024 at 18:32.
Pushed by ngraham into branch 'Plasma/6.2'.

applets/devicenotifier: Fix encrypted devices not being shown

This was accidentally removed in the port away from the DataEngine.
FIXED-IN: 6.2.0


(cherry picked from commit 14d52770a69e52332c66f81af755c2a7a7fca660)

7cbd12ef Fix encrypted devices are not shown.

Co-authored-by: Bohdan Onofriichuk <bogdan.onofriuchuk@gmail.com>

M  +2    -1    applets/devicenotifier/plugin/devicecontrol.cpp
M  +1    -0    applets/devicenotifier/plugin/devicecontrol.h

https://invent.kde.org/plasma/plasma-workspace/-/commit/179f69df384ac66354ca2e65579ce52ce9cfc35e