applets/devicenotifier: Fix encrypted devices not being shown

This was accidentally removed in the port away from the DataEngine.

BUG: 493675
FIXED-IN: 6.2.0